== 2.3 / 2014-05-DD

* Bugs:
  * Fixed a bug in <tt>MIME::Types#type_for</tt> where type specifications that
    did not match a MIME::Type would be returned as +nil+ inside the returned
    array. This was incorrect behaviour as those values should not have been
    returned, resulting in an empty array.

== 2.2 / 2014-03-14

* Clarified contribution guidelines for MIME types. Resolves
  {#57}[https://github.com/halostatue/mime-types/issues/57].
* Fixed a small bug where deprecated methods would warn of deprecation when
  called by internal methods. Resolves
  {#60}[https://github.com/halostatue/mime-types/issues/60].
* Dropped Code Climate; added Coveralls for test coverage reports.
* Removing external references to RubyForge, as it is shutting down. Resolves
  {#59}[https://github.com/halostatue/mime-types/issues/59].

== 2.1 / 2014-01-25

* API Changes (MIME::Type):
  * Added MIME::Type#xrefs and MIME::Type#xref_urls that have better handling
    of types of reference information. MIME::Type#references= has been
    deprecated. In a future release, both MIME::Type#references will be turned
    into a short-hand view on MIME::Type#xrefs, MIME::Type#urls will be an
    alias for MIME::Type#xref_urls, and MIME::Type#references= will be removed.
* New or Updated MIME Types:
  * This information is now tracked in History-Types.rdoc.
* MIME Type Development Tools
  * The IANA registry format changed, breaking the IANA registry tool
    previously used. Rewrote IANADownloader and IANADownloader::Parser as
    IANARegistryParser using the XML form.
  * The LTSW list has been dropped as it has not been updated since 2002.
  * The default Apache MIME types configuration list is now used to enrich MIME
    type data with additional extension information.

== 2.0 / 2013-10-27

* API Changes (General):
  * mime-types is no longer compatible with Ruby 1.8. Additionally, for its
    YAML operations (normally development and test), it requires a YAML parser